--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: "Formula Condensed";
+  src: url("/fonts/formula_condensed.woff2") format("woff2"),
+    url("/fonts/formula_condensed.woff") format("woff");
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -50,7 +56,9 @@ a {
 }
 
 .nav {
-  text-transform: uppercase;
+  font-size: 24px;
+  font-family: "Formula Condensed";
+  padding: 0 32px !important;
 }
 
 .nav-divider {
