--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
   width: 100%;
   height: 100vh;
   padding: 1em 0;
+  overflow-y: auto;
 }
 
 .content > * {
@@ -68,7 +69,7 @@ a {
 .row {
   width: 100%;
   display: flex;
-  padding: 0 2em;
+  padding: 0.5em 2em;
   align-items: center;
 }
 
@@ -79,4 +80,9 @@ a {
 
 .row > .col:first-child {
   flex: 2;
+}
+
+.desc {
+  font-size: 11px;
+  color: #898989;
 }
